--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="sign_up">Sign up</string>
     <string name="welcome_back">Welcome Back!</string>
+    <string name="enter_email_here">Enter email here</string>
+    <string name="enter_username_email_here">Enter username/email here</string>
+    <string name="workout">workout</string>
+    <string name="kcal">kcal</string>
+    <string name="week_goal">WEEK GOAL</string>
+    <string name="minute">minute</string>
 </resources>
