Updated UI of Main Activity and changed default app font

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="strong_muscular_man_lifting_dumbbell">strong muscular man lifting dumbbell</string>
     <string name="medium_shot_man_stretching_arm">medium shot man stretching arm</string>
     <string name="logo_of_app">Logo of App</string>
+    <string name="set_up_your_account">Set up your account</string>
+    <string name="login_to_your_account">Login to your account</string>
+    <string name="zero">0</string>
 </resources>
